k8s/production/content-processing-service-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: content-processing-service
    service-type: content-service
  name: content-processing-service-vs
  namespace: iacherie-production
spec:
  hosts:
  - content-processing-service.iacherie-production.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    retries:
      attempts: 3
      perTryTimeout: 10s
      retryOn: gateway-error,connect-failure,refused-stream
    route:
    - destination:
        host: content-processing-service.iacherie-production.svc.cluster.local
        port:
          number: 8002
    timeout: 30s
